--- a/StudentList/WebContent/UpdateStudent.html
+++ b/StudentList/WebContent/UpdateStudent.html
@@ -1,3 +1,4 @@
+<!-- page 12---- here we update the existing student details -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -11,12 +12,12 @@
 <h6>enter the student id to update</h6>
 <br>
 <form action="UpdateStudent">
-       Id : <input type="number" name="id"><br>
-       <input type="submit" value="update the student">
+       Id : <input type="number" name="id"><br> <!-- here we enter the student id, we want to update -->
+       <input type="submit" value="update the student"> <!-- once we submit id will be passed to the update student page -->
 </form>
 <br>
 <form action="StudentServlet">
-      <input type="submit" value="return to student details">
+      <input type="submit" value="return to student details"> <!-- after updating the student record if we press this button it will take us back to the student details page -->
 </form>
 </body>
 </html>
