--- a/StudentList/WebContent/NewStudent.html
+++ b/StudentList/WebContent/NewStudent.html
@@ -1,3 +1,4 @@
+<!-- page 6--- this page is for adding the information of the new student -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -15,11 +16,11 @@
        First Name : <input type="text" name="fname"><br>
        Last Name : <input type="text" name="lname"><br>
        Email : <input type="text" name="email"><br>
-       <input type="submit" value="save the student">
+       <input type="submit" value="save the student"><!-- when we submit the data , it will transfer to the new student servlet file -->
 </form>
 
 <form action="StudentServlet">
-      <input type="submit" value="return to student details">
+      <input type="submit" value="return to student details"> <!-- after adding new student if we click this button it will take us back to the home page of student list -->
 </form>
 </body>
 </html>
